--- a/temps/templates/linechart.html
+++ b/temps/templates/linechart.html
@@ -21,7 +21,10 @@
                     options: {
                         scales:{
                             xAxis:{
-                                
+                                type:"time",
+                                time: {
+                                    unit: "hour"
+                                }
                             }
                         }
                     }
