Actually show latest on index page, trying different ways to output to chartjs

--- a/temps/templates/index.html
+++ b/temps/templates/index.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-<div> Lämmöt: {{temps.1.temp}} Aika : {{temps.0.time}}</div>
+<div> Lämmöt: {{temps.temp}} Aika : {{temps.time}}</div>
 
 
 <iframe width="600" height="400" src="{%url 'line_chart'%}""></iframe>
