Bootstrap cards for better visuals

--- a/temps/templates/linechart.html
+++ b/temps/templates/linechart.html
@@ -21,10 +21,10 @@
                     options: {
                         scales:{
                             xAxis:{
-                                type:"time",
+                                /*type:"time",
                                 time: {
                                     unit: "hour"
-                                }
+                                }*/
                             }
                         }
                     }
