Added arduino script, POST request handling to django

--- a/temps/templates/index_LOCAL_25831.html
+++ b/temps/templates/index_LOCAL_25831.html
@@ -19,8 +19,7 @@
                 <div class="card ">
                     <div class="card-body">
                         <h5 class="card-title">Viimeisin lämpötila</h5>
-                        <h6> Lämpötila: {{temps.temp}}</h6>
-                        <h6>Aika : {{temps.time}}</h6>
+                        <h6> Lämmöt: {{temps.1.temp}} Aika : {{temps.0.time}}</h6>
                     </div>
                 </div>
             </div>
