--- a/temps/templates/index.html
+++ b/temps/templates/index.html
@@ -5,6 +5,7 @@
     <head>
     <title> Lämmöt</title>
     <meta charset="utf-8">
+    <meta http-equiv="refresh" content="7" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     
 
