--- a/temps/templates/index.html
+++ b/temps/templates/index.html
@@ -1,14 +1,12 @@
 {% load static %}
 
 <!DOCTYPE html>
-<http>
-    <head>
-    <title> Lämmöt</title>
+<html>
+<head>
+    <title>Lämmöt</title>
     <meta charset="utf-8">
-    <meta http-equiv="refresh" content="7" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    
-
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 <body>
 <div class="container d-flex align-items-center justify-content-center">
@@ -16,21 +14,20 @@
         <h2>Kuivurin status</h2>
 
         <div class="row">
-            <div class="col-md-4 mt-4">
-                <div class="card ">
+            <div class="col-md-12 mt-4">
+                <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Viimeisin lämpötila</h5>
-                        <h6> Lämpötila: {{temps.temp}}</h6>
-                        <h6>Aika : {{temps.time}}</h6>
+                        <h6>Lämpötila: <span id="latest-temp">{{ temps.temp }}</span></h6>
+                        <h6>Aika: <span id="latest-time">{{ temps.time|date:"H:i:s" }}</span></h6>
                     </div>
                 </div>
             </div>
-            <div class=""></div>
-                <div class="card mx-auto">
+            <div class="col-md-12 mt-4">
+                <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Viimeisin x tuntia</h5>
-                        <iframe width="600" height="400" src="{%url 'line_chart'%}"></iframe>
-
+                        <iframe width="100%" height="600" src="{% url 'line_chart' %}"></iframe>
                     </div>
                 </div>
             </div>
@@ -38,5 +35,4 @@
     </div>
 </div>
 </body>
-
-</http>
+</html>
