--- a/temps/templates/linechart.html
+++ b/temps/templates/linechart.html
@@ -8,29 +8,75 @@
     </head>
     <body>
 
-        <canvas width="500" height="600" id="myChart"></canvas>
+        <div class="btn-group" role="group" aria-label="Time Range">
+            <button type="button" class="btn btn-primary" onclick="updateChart(30)">Viimeiset 30 minuuttia</button>
+            <button type="button" class="btn btn-primary" onclick="updateChart(60)">Viimeisin tunti</button>
+            <button type="button" class="btn btn-primary" onclick="updateChart(480)">Viimeiset 8 tuntia</button>
+        </div>
+
+        <canvas width="100%" height="100%" id="myChart"></canvas>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/date-fns/1.30.1/date_fns.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
         <script type="text/javascript">
-            $.get('{% url "line_chart_json" %}', function(data) {
-                var ctx = $("#myChart").get(0).getContext("2d");
-                new Chart(ctx, {
-                    type: 'line',
-                    data: data,
-                    options: {
-                        scales:{
-                            xAxis:{
-                                /*type:"time",
-                                time: {
-                                    unit: "hour"
-                                }*/
-                            }
+            var chart;
+
+            function updateChart(minutes) {
+                $.get('{% url "line_chart_json" %}', function(data) {
+                    var filteredData = {
+                        labels: [],
+                        datasets: [{
+                            label: data.datasets[0].label,
+                            data: [],
+                            fill: false,
+                            borderColor: data.datasets[0].borderColor,
+                            tension: 0.1
+                        }]
+                    };
+
+                    var now = new Date();
+                    var cutoff = new Date(now.getTime() - minutes * 60000);
+
+                    for (var i = 0; i < data.labels.length; i++) {
+                        var time = new Date(data.labels[i]);
+                        if (time >= cutoff) {
+                            filteredData.labels.push(data.labels[i]);
+                            filteredData.datasets[0].data.push(data.datasets[0].data[i]);
                         }
                     }
-                }
-            );
+
+                    if (chart) {
+                        chart.destroy();
+                    }
+
+                    var ctx = $("#myChart").get(0).getContext("2d");
+                    chart = new Chart(ctx, {
+                        type: 'line',
+                        data: filteredData,
+                        options: {
+                            scales: {
+                                x: {
+                                    type: "time",
+                                    time: {
+                                        unit: "minute",
+                                        tooltipFormat: 'HH:mm',
+                                        displayFormats: {
+                                            minute: 'HH:mm'
+                                        }
+                                    }
+                                },
+                                y: {
+                                    beginAtZero: true
+                                }
+                            }
+                        }
+                    });
+                });
+            }
+
+            $(document).ready(function() {
+                updateChart(30); // Default to last 30 minutes
             });
         </script>
     </body>
