--- a/temps/templates/linechart.html
+++ b/temps/templates/linechart.html
@@ -9,9 +9,9 @@
     <body>
 
         <div class="btn-group" role="group" aria-label="Time Range">
-            <button type="button" class="btn btn-primary" onclick="updateChart(30)">Viimeiset 30 minuuttia</button>
-            <button type="button" class="btn btn-primary" onclick="updateChart(60)">Viimeisin tunti</button>
-            <button type="button" class="btn btn-primary" onclick="updateChart(480)">Viimeiset 8 tuntia</button>
+            <button type="button" class="btn btn-primary" onclick="updateChart(30)">Last 30 Minutes</button>
+            <button type="button" class="btn btn-primary" onclick="updateChart(60)">Last 1 Hour</button>
+            <button type="button" class="btn btn-primary" onclick="updateChart(480)">Last 8 Hours</button>
         </div>
 
         <canvas width="100%" height="100%" id="myChart"></canvas>
@@ -19,6 +19,7 @@
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/date-fns/1.30.1/date_fns.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom/dist/chartjs-plugin-zoom.min.js"></script>
         <script type="text/javascript">
             var chart;
 
@@ -37,12 +38,16 @@
 
                     var now = new Date();
                     var cutoff = new Date(now.getTime() - minutes * 60000);
+                    var lastTime = null;
 
                     for (var i = 0; i < data.labels.length; i++) {
                         var time = new Date(data.labels[i]);
                         if (time >= cutoff) {
-                            filteredData.labels.push(data.labels[i]);
-                            filteredData.datasets[0].data.push(data.datasets[0].data[i]);
+                            if (lastTime === null || (time - lastTime) >= 60000) { // 60000 ms = 1 minute
+                                filteredData.labels.push(data.labels[i]);
+                                filteredData.datasets[0].data.push(data.datasets[0].data[i]);
+                                lastTime = time;
+                            }
                         }
                     }
 
@@ -68,6 +73,31 @@
                                 },
                                 y: {
                                     beginAtZero: true
+                                }
+                            },
+                            plugins: {
+                                zoom: {
+                                    zoom: {
+                                        wheel: {
+                                            enabled: true
+                                        },
+                                        pinch: {
+                                            enabled: true
+                                        },
+                                        mode: 'x'
+                                    },
+                                    pan: {
+                                        enabled: true,
+                                        mode: 'x',
+                                        rangeMin: {
+                                            x: null,
+                                            y: null
+                                        },
+                                        rangeMax: {
+                                            x: null,
+                                            y: null
+                                        }
+                                    }
                                 }
                             }
                         }
