--- a/temps/templates/linechart.html
+++ b/temps/templates/linechart.html
@@ -15,11 +15,13 @@
         </div>
 
         <canvas width="100%" height="100%" id="myChart"></canvas>
+
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/date-fns/1.30.1/date_fns.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom/dist/chartjs-plugin-zoom.min.js"></script>
+
         <script type="text/javascript">
             var chart;
 
@@ -27,35 +29,38 @@
                 $.get('{% url "line_chart_json" %}', function(data) {
                     var filteredData = {
                         labels: [],
-                        datasets: [{
-                            label: data.datasets[0].label,
-                            data: [],
-                            fill: false,
-                            borderColor: data.datasets[0].borderColor,
-                            tension: 0.1
-                        }]
+                        datasets: []
                     };
 
                     var now = new Date();
                     var cutoff = new Date(now.getTime() - minutes * 60000);
-                    var lastTime = null;
 
-                    for (var i = 0; i < data.labels.length; i++) {
-                        var time = new Date(data.labels[i]);
-                        if (time >= cutoff) {
-                            if (lastTime === null || (time - lastTime) >= 60000) { // 60000 ms = 1 minute
-                                filteredData.labels.push(data.labels[i]);
-                                filteredData.datasets[0].data.push(data.datasets[0].data[i]);
-                                lastTime = time;
-                            }
-                        }
-                    }
+                    filteredData.labels = data.labels.filter(function(label) {
+                        var time = new Date(label);
+                        return time >= cutoff;
+                    });
+
+                    data.datasets.forEach(function(dataset) {
+                        var filteredDataset = {
+                            label: dataset.label,
+                            data: [],
+                            fill: false,
+                            borderColor: dataset.borderColor,
+                            tension: 0.1,
+                            hidden: dataset.hidden
+                        };
+
+                        filteredDataset.data = dataset.data.slice(-filteredData.labels.length);
+
+                        filteredData.datasets.push(filteredDataset);
+                    });
 
                     if (chart) {
                         chart.destroy();
                     }
 
                     var ctx = $("#myChart").get(0).getContext("2d");
+
                     chart = new Chart(ctx, {
                         type: 'line',
                         data: filteredData,
@@ -88,15 +93,7 @@
                                     },
                                     pan: {
                                         enabled: true,
-                                        mode: 'x',
-                                        rangeMin: {
-                                            x: null,
-                                            y: null
-                                        },
-                                        rangeMax: {
-                                            x: null,
-                                            y: null
-                                        }
+                                        mode: 'x'
                                     }
                                 }
                             }
@@ -106,7 +103,7 @@
             }
 
             $(document).ready(function() {
-                updateChart(30); // Default to last 30 minutes
+                updateChart(30);
             });
         </script>
     </body>
